# vercel-python-code-agent

./: README.md  TEMPLATE_MIGRATION.md
backend/: .env.template  pyproject.toml  requirements.txt  server.py
backend/src/: agent.py  run_store.py  server.py  sse.py
backend/src/agent/: _prompt.md  agent.py  context.py  tools.py  utils.py
backend/src/agent/tools/: core.py  fs_ops.py  sandbox.py
backend/src/api/: agent.py  auth.py  auth_routes.py  inline_fix.py  models.py  sandbox.py
backend/src/sandbox/: cache.py  command.py  utils.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  constants.ts  index.css  main.tsx  templates.ts
frontend/src/app/: App.tsx  globals.css  layout.tsx
frontend/src/components/: AuthModal.tsx  ChatInput.tsx  CodeFixModal.tsx  EditorPane.tsx  ExecRequestPrompt.tsx  FileTree.tsx  ModelPicker.tsx  NewProjectModal.tsx  ProjectTabs.tsx  StatusBar.tsx  TerminalPane.tsx  ThreePane.tsx  Timeline.tsx
frontend/src/context/: AuthContext.tsx  ProjectsContext.tsx  RunContext.tsx
frontend/src/hooks/: useAgentEvents.tsx  useAgentStream.tsx  useChat.tsx  usePlay.tsx
frontend/src/lib/: hash.ts  persistence.ts  sandbox.ts  user.ts
frontend/src/templates/: IMPLEMENTATION.md  README.md  index.ts  verify.ts
frontend/src/types/: run.ts  sandbox.ts
frontend/templates/express/: README.md
frontend_next/: next.config.ts  package.json  pnpm-lock.yaml
frontend_next/src/: constants.ts  templates.ts
(+79 files in other folders)
